Punto 6 Modificaion de archivo html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <p>Modificado por Yehiron Toro Bermudez</p>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
