--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>The z-index property</h1>
-
+<p>Bievenidos a Introduccion a la Informatica Frida</p>
 <div id="myDIV">
   <div id="myBox">myBox</div>
   <div style="top:20px;left:20px;z-index:0;">z-index 0</div>
